# the-workflow-engine

./: .gitignore  .gitlab-ci.yml  ANTIPATTERNS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GATE_STATE.md  GOLD_STANDARDS.md  LICENSE  PATTERNS.md  PRIME_DIRECTIVE_WAIVER.md  QUICKSTART.md  README.md  SECURITY.md  build.rs  plan.toml
.cargo/: audit.toml
.claude/: ALIGNMENT_VERIFICATION.md  anti_patterns.json  context.json  patterns.json  settings.json
.claude/agents/: cc-contract-verifier.md  cluster-spec-author.md  ember-rubric-tester.md  escape-surface-checker.md  gate-verifier.md  godtier-rust-debugger.md  godtier-rust-maintainer.md  waiver-tracker.md
.claude/commands/: cc-verify.md  cluster-scan.md  gate-status.md  module-matrix-update.md  module-spec.md  waiver-status.md
.claude/hooks/: pre-write-no-rust-pre-g9.sh  (+3 more)
.obsidian/: workspace.json
ai_docs/: API_MAP.md  ARCHITECTURE_DEEP_DIVE.md  CARGO_LAYOUT_SPEC.md  CODE_MODULE_MAP.md  CONVENTIONAL_GAP_ANALYSIS_S1002209.md  DEPLOYMENT_GUIDE.md  ERROR_TAXONOMY.md  GENESIS_PROMPT_V1_3.md  GENESIS_PROMPT_V1_4.md  HARDENING_FLEET_2026-05-21.md  HARDENING_FLEET_CARRY_FORWARD_S1002600.md  HARDENING_W2_FINDINGS.md  HARDENING_W3_TYPE_DESIGN_PORTFOLIO.md  INDEX.md  MESSAGE_FLOWS.md  META_TREE_MIND_MAP.md  MUTATION_TEST_REPORT_S1002600.md  NA_GAP_ANALYSIS_S1002127_SCAFFOLD.md  ONBOARDING.md  PERFORMANCE.md  PHASE1_RESIDUAL_LIST_S1004115.md  PHASE2_AUDIT_S1004115.md  PHASE8_INTEGRATION_S1004115.md  PHASE9_SD_RECONCILIATION_S1004115.md  QUICKSTART.md  STATE_MACHINES.md  WAVE_16_WF_DAEMON_DESIGN_S1005032.md  WORKFLOW_TRACE_COMPLETION_PLAN_S1004115.md  WORKFLOW_TRACE_COMPLETION_PLAN_S1004115_CONVENTIONAL_GAP_ANALYSIS.md  WORKFLOW_TRACE_COMPLETION_PLAN_S1004115_NA_GAP_ANALYSIS.md  WORKFLOW_TRACE_COMPLETION_PLAN_V2_S1004115.md  WORKFLOW_TRACE_V020_PHASE2_AUDIT_S1004377.md  WORKFLOW_TRACE_V020_PLAN_S1004377.md  WORKFLOW_TRACE_V020_PLAN_S1004377_CONVENTIONAL_GAP_ANALYSIS.md  WORKFLOW_TRACE_V020_PLAN_S1004377_NA_GAP_ANALYSIS.md  WORKFLOW_TRACE_V020_PLAN_STUB_S1004115.md  WORKFLOW_TRACE_V020_PLAN_V2_S1004377.md
ai_specs/: API_SPEC.md  BENCHMARK_SPEC.md  CONSENT_SPEC.md  DATABASE_SPEC.md  DESIGN_CONSTRAINTS.md  ERROR_TAXONOMY.md  EVENT_SYSTEM_SPEC.md  INDEX.md  IPC_BUS_SPEC.md  MODULE_MATRIX.md  OBSERVABILITY_SPEC.md  SECURITY_SPEC.md  TEST_STRATEGY.md  WF_DAEMON_HTTP_SHAPE.md  WIRE_PROTOCOL_SPEC.md
benches/: README.md
config/: README.md  default.toml.template  devenv-service.toml.template  production.toml.template
docs/: COMMAND_MAPPING.md  DIAGNOSTICS.md  README.md
hooks/: README.md
migrations/: README.md
modules/: README.md
pre-framework-consolidation/: CONVERGENCE_COMMAND_X_COMMAND3_S1001982.md  GENESIS_PROMPT_V0.md  INTERVIEW_QUESTION_BANK_DRAFT.md  THE_WORKFLOW_ENGINE_BOILERPLATE_HUNT_S1001982.md  THE_WORKFLOW_ENGINE_CIRCLE_OF_EXPERTS_S1001982.md  THE_WORKFLOW_ENGINE_END_TO_END_DEPLOYMENT_PLAN_S1001982.md  THE_WORKFLOW_ENGINE_GENESIS_PROMPT_V1_S1001982.md  THE_WORKFLOW_ENGINE_MODULE_STRUCTURE_S1001982.md  THE_WORKFLOW_ENGINE_TOWN_HALL_S1001982.md  WATCHER_DEPLOYMENT_WATCH_JOURNAL_S1001982.md
schematics/: README.md
scripts/: README.md
security/: README.md
src/: README.md  lib.rs  user_facing_strings.rs
tests/: README.md  cc1_cascade_cost_coupling.rs  cc2_trust_layer.rs  cc3_evidence_iteration.rs  cc4_proposal_to_dispatch_pipeline.rs  cc5_substrate_cycle.rs  cc6_verifier_gated_dispatch.rs  cc7_pressure_evolution.rs  ember_gate.rs  ember_held_approvals.tsv  m10_integration.rs  m11_integration.rs  m12_integration.rs  m13_integration.rs  m14_integration.rs  m1_integration.rs  m20_integration.rs  m21_integration.rs  m22_integration.rs  m23_integration.rs  m2_integration.rs  m30_integration.rs  m31_integration.rs  m32_integration.rs  m33_integration.rs  m3_integration.rs  m40_integration.rs  m41_integration.rs  m42_integration.rs  m4_integration.rs  m5_integration.rs  m6_integration.rs  m7_integration.rs  m8_integration.rs  m9_integration.rs  na4_acceptance_cond0_drift_check.rs  substrate_fixtures.rs  wf_crystallise_integration.rs  wf_dispatch_integration.rs
the-workflow-engine-vault/: Assessment Remediation S1003733.md  Assessment S1004590 — 7-Facet End-to-End 91-100.md  Boilerplate Hunt S1001982.md  Circle of Experts S1001982.md  Cluster A Scaffold — Module Specs S1002127.md  Cluster B Scaffold — Module Specs S1002127.md  Cluster C Scaffold — Module Specs S1002127.md  Cluster D Scaffold — Module Specs S1002127.md  Cluster E Scaffold — Module Specs S1002127.md  Cluster F Scaffold — Module Specs S1002127.md  Cluster G Scaffold — Module Specs S1002127.md  Cluster H Scaffold — Module Specs S1002127.md  Convergence Command x Command-3 S1001982.md  GOD_TIER_CONSOLIDATION_S1001982.md  Genesis Prompt v0 S1001982.md  Genesis Prompt v1.2 S1001982.md  HOME.md  Hardening Fleet 2026-05-21.md  Interview Question Bank Draft S1001982.md  MASTER_INDEX.md  Module Structure S1001982.md  Modules Synergy Clusters and Feature Verification S1001982.md  NA-4 Acceptance Test Spec — 8-Condition Gate S1004590.md  Pre-Framework Consolidation Notice S1001982.md  SYNTHEX-V2 Integration Master Schematic.md  Scaffold Wave 0-2 — Session S1002127.md  Session S1004115 — Completion Plan v2 Locked.md  Session S1004115 — v0.1.1 + v0.2.0 Prep Save.md  Session S1004377 — v0.2.0 SHIPPED.md  Session S1004590 — Checkpoint v021_hardening_assessment_91.md  Session S1004590 — v0.2.1 Hardening Close.md  Town Hall S1001982.md  ULTIMATE_DEPLOYMENT_FRAMEWORK_S1001982.md  Vault Save Status S1001982.md  Watcher Deployment Watch Journal S1001982.md  Wave-15 — wf-poller wiring S1005032.md  Wave-16 — wf-daemon Habitat Service Shape S1005032.md  Wave-17 — Wire-Aware Health + wf-poller Merge S1005032.md  Wiring 01 — m16 Heartbeat Consumer (NA-4 Closure).md  Wiring 02 — NexusEvent Bidirectional Push.md  (+9 more)
ultramap/: CONTEXTUAL_FLOW.md  CONTROL_FLOW.md  DATA_FLOW.md  INVARIANT_MAP.md  MODULE_DEPENDENCY_GRAPH.md  README.md  ULTRAMAP.md  WF_CRYSTALLISE_PIPELINE.md  WF_DAEMON_LIFECYCLE.md  WF_DISPATCH_PIPELINE.md
(+346 files in other folders)
