[package]
name = "workflow-trace"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Luke @ node 0.A", "Command @ habitat"]
license = "MIT OR Apache-2.0"
description = "Cascading-command + Battern-protocol + context-window observation engine for the Zellij habitat"
readme = "README.md"
publish = false

[lib]
name = "workflow_core"
path = "src/lib.rs"

[[bin]]
name = "wf-crystallise"
path = "src/bin/wf_crystallise.rs"

[[bin]]
name = "wf-dispatch"
path = "src/bin/wf_dispatch.rs"

# `wf-poller` — Wave-15 the actual wire (m16 DriftDetector + W1
# HeartbeatTransport + tick loop). Per Luke's 2026-05-25 directive
# "ensure the workflow-engine is fully and comprehensively wired into
# synthex". Until this binary lands the m16 / W1 / V5 library code
# shipped in v0.2.0 and v0.2.2+ was dead code.
# `wf-daemon` — habitat-service shape (S1005032 Wave-16+Wave-17).
# Long-running tokio HTTP daemon exposing GET /health on port 8142
# (wire-aware body with tick counters + last_ok_ms, Wave-17) plus the
# wf-poller tick logic spawned as a tokio::task::spawn_blocking. This is
# the service-shape binary that `~/.local/bin/devenv start` manages,
# `habitat-nerve-center` probes, and the Zellij habitat-plugin renders in
# the 14/15-service grid as `WFE`.
#
# Wave-17 (S1005032): `wf-poller` standalone CLI is DELETED. Operators
# wanting poller-only / no-HTTP mode run `WF_DAEMON_DISABLE_HTTP=1
# wf-daemon`. The 4-binary topology (wf-crystallise + wf-dispatch +
# wf-poller + wf-daemon) collapses to a 3-binary topology (wf-crystallise
# + wf-dispatch + wf-daemon) — wf-daemon subsumes wf-poller via env-gate.
[[bin]]
name = "wf-daemon"
path = "src/bin/wf_daemon.rs"

[dependencies]
# axum + tower for the wf-daemon /health endpoint (Wave-16 service-shape).
# `hyper` + `tower-http` already in tree transitively via reqwest, so axum
# adds only the routing layer.
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
tower = "0.5"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# m10 Ember CI gate — RFC 3339 timestamps for the allowlist TSV.
# Chosen over `chrono` per GOD_TIER_RUST rule 18.
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
# m1 atuin consumer + m3 injection.db consumer — read-only SQLite WAL.
# `bundled` ships libsqlite3 source so we don't depend on the host's lib.
rusqlite = { version = "0.33", features = ["bundled"] }
# m5 battern_step_record — regex heuristics for soft-schema step labelling.
regex = "1"
# m2 stcortex narrowed consumer — local path dep matching the stcortex
# rust-subscriber Cargo.toml. module_bindings are vendored under
# `src/m2_stcortex_consumer/module_bindings/` (canonical SpacetimeDB
# consumer pattern).
# RELATIVE path (T4-PORT, Zen assessment improvement #4): `spacetimedb/` is a
# sibling of `the-workflow-engine/` under `claude-code-workspace/`, so this
# resolves on any host without a hard-coded `/home/louranicas/...` prefix.
spacetimedb-sdk = { path = "../spacetimedb/sdks/rust" }
tokio = { version = "1", features = ["full"] }

# tracing-subscriber needed for the wf-poller binary's runtime log
# subscriber (Wave-15 wire-in). Was dev-only before; promoted to regular
# dep because the binary emits structured logs at runtime per Wave-9
# Gate A discipline (`kind_preview="wf_poller_tick"`).
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[build-dependencies]
# Build script is intentionally minimal (env-var-only per m8 spec § 10);
# no HTTP deps needed at build time. cfg.rs is shared via `include!` so it
# must be self-contained (no `use` statements above the constants).

[dev-dependencies]
# m10 allowlist tests use temp TSV files.
tempfile = "3"
# m11 Gap 2 property tests — 10 invariants × up-to-10k cases each.
proptest = "1"
# Cluster H Wave-A3 (C4 / H3 / H4) — mock HTTP server for end-to-end
# adversarial tests of m40 body-shape rejection (AP-V7-13: health-200 ≠
# behaviour-verified) and m41 JSON-RPC id-echo / error-envelope edge cases.
# Pure tokio-based; doesn't pull in extra heavy deps (matches our existing
# tokio dependency).
wiremock = "0.6"

[features]
# `default = ["full"]` enables every reserved feature. The four sub-features
# below are RESERVED per `plan.toml` (`feature_gate` declarations — m14/m15 +
# m20-m23 → `intelligence`, m32 dispatch CLI → `api`, monitoring modules →
# `monitoring`). They are NOT yet wired as `#[cfg(feature = ...)]` in source:
# the 26 modules form an interdependent graph that does not partition cleanly,
# so module-level feature-gating is deferred pending an explicit architecture
# decision. Until then they intentionally enable nothing. `cfg!(feature =
# "full")` is also a fixture used by `tests/m8_integration.rs` to confirm
# `--all-features` does NOT activate the m8 `povm_calibrated` rustc-cfg.
default = ["full"]
full = ["api", "intelligence", "monitoring", "evolution"]
api = []
intelligence = []
monitoring = []
evolution = []
# Opt-in substrate-side benchmarks per BENCHMARK_SPEC.md § Substrate-side
# load benchmarks (Wave 4.B NA-GAP-04 closure). Off by default for
# production safety (substrate co-tenant traffic risk).
substrate-load = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

# Declare custom cfg flags so `rustc` 1.80+ does not warn on the `cfg(povm_calibrated)`
# emitted by `build.rs` (m8 compile-time gate). Per m8 spec § 5: NOT a `[features]`
# flag — it is intentionally a `rustc-cfg` so `--features full` / `--all-features`
# cannot activate it (F7 / AP-V7-09 defense).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(povm_calibrated)'] }
